--- a/config.yml
+++ b/config.yml
@@ -50,3 +50,11 @@ template: "simple"
 #      cookie_name: eshop.session
 #      is_secure: 1
 #      is_http_only: 1
+
+# defaults for cache connection
+cache_params:
+  http_verb: GET
+  scheme: http
+  server: localhost
+  port  : 8090
+  path  : login
