--- a/environments/development.yml
+++ b/environments/development.yml
@@ -24,10 +24,10 @@ startup_info: 1
 
 serializer: JSON
 
-
 cache_params:
   http_verb: GET
   scheme: http
   server: localhost
-  port  : 8080
+  port  : 8090
   path  : login
+  timeout: 1
